--- a/app/views/admin/index.html
+++ b/app/views/admin/index.html
@@ -225,13 +225,13 @@
 										<h4>Web por Nucleos</h4>
 										<hr>
 				
-										<div class="col-md-12 user-progress justify-center">
+										<div class="col-md-12 col-lg-12 user-progress justify-center">
 											<div class="row">
-												<div class="col-sm-4 col-md-6">
+												<div class="col-sm-4 col-md-6 col-lg-4">
 													<img alt class="rounded-circle img-fluid d-block mx-auto" src="../../uploads/perfil/user.jpg" style="width: 100%">	
 												</div>	
 											
-												<div class="col-sm-8 col-md-6">
+												<div class="col-sm-8 col-md-6 col-lg-8">
 													<br>
 													<a href="">Anzoategui</a>
 												</div>
@@ -241,11 +241,11 @@
 
 										<div class="col-md-12 user-progress justify-center">
 											<div class="row">
-												<div class="col-sm-4 col-md-6">
+												<div class="col-sm-4 col-md-6 col-lg-4">
 													<img alt class="rounded-circle img-fluid d-block mx-auto" src="images/index/nucleos/bolivar.png" style="width: 100%">	
 												</div>	
 											
-												<div class="col-sm-8 col-md-6">
+												<div class="col-sm-8 col-md-6 col-lg-8">
 													<br>
 													<a href="">Bolivar</a>
 												</div>
@@ -255,11 +255,11 @@
 
 										<div class="col-md-12 user-progress justify-center">
 											<div class="row">
-												<div class="col-sm-4 col-md-6">
+												<div class="col-sm-4 col-md-6 col-lg-4">
 													<img alt class="rounded-circle img-fluid d-block mx-auto" src="images/index/nucleos/monagas.png" style="width: 100%">	
 												</div>	
 											
-												<div class="col-sm-8 col-md-6">
+												<div class="col-sm-8 col-md-6 col-lg-8">
 													<br>
 													<a href="">Monagas</a>
 												</div>
@@ -269,11 +269,11 @@
 
 										<div class="col-md-12 user-progress justify-center">
 											<div class="row">
-												<div class="col-sm-4 col-md-6">
+												<div class="col-sm-4 col-md-6 col-lg-4">
 													<img alt class="rounded-circle img-fluid d-block mx-auto" src="images/index/nucleos/nuevaesparta.png" style="width: 100%">	
 												</div>	
 											
-												<div class="col-sm-8 col-md-6">
+												<div class="col-sm-8 col-md-6 col-lg-8">
 													<br>
 													<a href="">Nva. Esparta</a>
 												</div>
@@ -283,11 +283,11 @@
 
 										<div class="col-md-12 user-progress justify-center">
 											<div class="row">
-												<div class="col-sm-4 col-md-6">
+												<div class="col-sm-4 col-md-6 col-lg-4">
 													<img alt class="rounded-circle img-fluid d-block mx-auto" src="images/index/nucleos/sucre.png" style="width: 100%">	
 												</div>	
 											
-												<div class="col-sm-8 col-md-6">
+												<div class="col-sm-8 col-md-6 col-lg-8">
 													<br>
 													<a href="">Sucre</a>
 												</div>
