Reemplazando al personal CREDIUDO (Incompleto)

--- a/app/views/president/index.html
+++ b/app/views/president/index.html
@@ -172,7 +172,7 @@
 													<div class="col-md-12">
 														<div class="row">
 															<div class="col-sm-4 col-md-4 text-center">
-																<img alt class="rounded-circle" src="../../uploads/perfil/user.jpg" style="width: 70%">
+																<img alt class="rounded-circle" src="../../uploads/perfil/user.jpg" style="width: 40%">
 										  						<p style="font-size: 10pt; margin-bottom: 0">Presidente</p>
 															</div>
 															<div class="col-sm-8 col-md-8">
@@ -187,7 +187,7 @@
 													<div class="col-md-12">
 														<div class="row">
 															<div class="col-sm-4 col-md-4 text-center">
-																<img alt class="rounded-circle" src="../../uploads/perfil/user.jpg" style="width: 70%">
+																<img alt class="rounded-circle" src="../../uploads/perfil/user.jpg" style="width: 40%">
 										  						<p style="font-size: 10pt; margin-bottom: 0">Coord. Planificación</p>
 															</div>
 															<div class="col-sm-6 col-md-6">
@@ -195,7 +195,7 @@
 										  						<p style="margin: 2px" class="text-muted"><em>C.I: <%- coordPlani.cedula %></em></p>
 															</div>
 															<div class="col-sm-2 col-md-2">
-																<a href="/president/cambiar/<%- coordPlani.cedula %>" class="btn btn-light btn-sm edit-eval">
+																<a href="/president/cambiar_coordP/<%- coordPlani.cedula %>" class="btn btn-light btn-sm edit-eval">
 															        <span class="glyphicon glyphicon-log-in"></span><i class="fa fa-exchange"></i>
 															    </a>
 															</div>
@@ -207,7 +207,7 @@
 													<div class="col-md-12">
 														<div class="row">
 															<div class="col-sm-4 col-md-4 text-center">
-																<img alt class="rounded-circle" src="../../uploads/perfil/user.jpg" style="width: 70%">
+																<img alt class="rounded-circle" src="../../uploads/perfil/user.jpg" style="width: 40%">
 										  						<p style="font-size: 10pt; margin-bottom: 0">Coord. Evaluación</p>
 															</div>
 															<div class="col-sm-6 col-md-6">
@@ -215,7 +215,7 @@
 										  						<p style="margin: 2px" class="text-muted"><em>C.I: <%- coordEval.cedula %></em></p>
 															</div>
 															<div class="col-sm-2 col-md-2">
-																<a href="/president/cambiar/<%- coordEval.cedula %>" class="btn btn-light btn-sm edit-eval">
+																<a href="/president/cambiar_coordEval/<%- coordEval.cedula %>" class="btn btn-light btn-sm edit-eval">
 															        <span class="glyphicon glyphicon-log-in"></span><i class="fa fa-exchange"></i>
 															    </a>
 															</div>
@@ -224,6 +224,7 @@
 												</div>
 											</div>
 										</div>
+										<br>
 									</div>
 								</div>
 							</div>
