--- a/app/views/president/cambiar/buscarCoordp.html
+++ b/app/views/president/cambiar/buscarCoordp.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<div class="jumbotron" style="margin-bottom: 0px; padding: 0">
-		<img src="images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
+		<img src="/images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
 	</div>	
 
 	<%- include('../../partials/president/navbar.html') %>
@@ -57,7 +57,55 @@
 						<br>
 					</div>
 
-					
+					<div class="col-lg-9">
+						<div class="row">
+							<div class="col-sm-12 col-md-12 col-lg-5">
+								<div class="card">
+									<div class="card-body">
+										<div class="article border-bottom">
+											<h3>Coord. de Planificación</h3>
+										</div>
+										<div class="row" style="margin-top: 10px">
+											<div class="col-sm-4 col-md-5 col-lg-4 text-center">
+												<img src="/images/img/user.png" alt="" class="img-thumbnail">
+											</div>
+											<div class="col-sm-8 col-md-7 col-lg-8">
+												<p style="margin-bottom: 3px; font-size: 15pt;"><b>Nombre: </b><%- coordPlani.nombre %></p>
+												<p style="margin-bottom: 3px; font-size: 15pt;"><b>Apellido: </b><%- coordPlani.apellido %></p>
+												<p style="margin-bottom: 3px; font-size: 15pt;"><b>C.I: </b><%- coordPlani.cedula %></p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-sm-12 col-md-12 col-lg-2 text-center">
+								<p style="font-size: 50pt"><span class="glyphicon glyphicon-log-in" ></span><i class="fa fa-exchange"></i></p>
+							</div>
+
+							<div class="col-sm-12 col-md-12 col-lg-5">
+								<div class="card">
+									<div class="card-body">
+										<div class="article border-bottom">
+											<h3>Reemplazo</h3>
+										</div>
+										<div class="row" style="margin-top: 10px">
+											<div class="col-sm-4 col-md-5 col-lg-4 text-center">
+												<img src="/images/img/user.png" alt="" class="img-thumbnail">
+											</div>
+											<div class="col-sm-8 col-md-7 col-lg-8">
+												<p style="margin-bottom: 3px; font-size: 15pt;"><b>Nombre: </b><%- Reemplazo.nombre %></p>
+												<p style="margin-bottom: 3px; font-size: 15pt;"><b>Apellido: </b><%- Reemplazo.apellido %></p>
+												<p style="margin-bottom: 3px; font-size: 15pt;"><b>C.I: </b><%- Reemplazo.cedula %></p>
+												<p style="margin-bottom: 3px; font-size: 15pt;"><b>Nucleo: </b><%- Reemplazo.nucleo.nombre %></p>
+												<p style="margin-bottom: 3px; font-size: 15pt;"><b>Unidad: </b><%- Reemplazo.unidad.nombre %></p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>		
 			</div>
 		</div>
