Agregando Restricciones para calificar a los usuarios

--- a/app/views/coord_plani/index.html
+++ b/app/views/coord_plani/index.html
@@ -5,7 +5,9 @@
 	<title>CREDIUDO | Coord. Planificación</title>
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<script type="text/javascript" src="/js/pace.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="/css/pace-theme-center-circle.css">
 	<!-- Custom styles for this template -->
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
 </head>
@@ -17,10 +19,11 @@
 	<%- include('../partials/coord_plani/navbar.html') %>
 
 	<div class="conatiner-fluid">
-		<div class="row justify-content-md-center">
-			<div class="col-md-10">
+		
+		
+			<div class="col-sm-12 col-md-12 col-lg-12">
 				<div class="row">
-					<div class="col-md-12">
+					<div class="col-sm-12 col-md-12 col-lg-12">
 						<!--=======MIGAS DE PAN=========-->
 						<nav aria-label="breadcrumb" style="margin-top: 1%">
 							<ol class="breadcrumb">
@@ -32,7 +35,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-md-3">
+					<div class="col-sm-12 col-md-12 col-lg-3">
 						<div class="card">
 						  	<div class="card-header">
 						    	Datos Personales:
@@ -47,9 +50,10 @@
 						    	</div>
 						  	</div>
 						</div>
+						<br>
 					</div>
 
-					<div class="col-md-9">
+					<div class="col-sm-12 col-md-12 col-lg-9">
 						<div class="row">
 							<div class="col-md-12">
 								<!--=======mensaje de alerta==========-->
@@ -155,7 +159,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
 	</div>
 	<br>
 	<footer class="footer" style="background: #BEBCB0;">
