--- a/app/views/index/index.html
+++ b/app/views/index/index.html
@@ -19,7 +19,7 @@
 
 		<div class="container-fluid">
 			<div class="row justify-content-md-center">
-				<div class="col-md-10">
+				<div class="col-sm-12 col-md-12 col-lg-12">
 					<div class="row">
 						<div class="col-md-12">
 							<!--=======MIGAS DE PAN=========-->
@@ -45,7 +45,7 @@
 									<div class="carousel-inner">
 										
 									    <div class="carousel-item active">
-										    <img src="images/index/eval.jpg" alt="Responsive image" class="img-fluid">
+										    <img src="images/index/eval.jpg" alt="Responsive image" class="img-fluid" style="width: 100%">
 										    <div class="carousel-caption d-none d-md-block">
 												<h5>CREDIUDO</h5>
 												<p>Zona de Evaluaciones</p>
@@ -57,7 +57,7 @@
 										<%} else {%>
 											<div class="carousel-item">
 												<a href="/dashboard">
-											      	<img src="images/index/eval.jpg" alt="Responsive image" class="img-fluid">
+											      	<img src="images/index/eval.jpg" alt="Responsive image" class="img-fluid" style="width: 100%">
 
 											      	<div class="carousel-caption d-none d-md-block">
 												    	<a href="/dashboard" style="color: white">
