algunos cambios en vistas

--- a/app/views/empleado/evaluacion/evalASubord.html
+++ b/app/views/empleado/evaluacion/evalASubord.html
@@ -23,7 +23,7 @@
 
 	<div class="container-fluid">
 		<div class="row justify-content-md-center">
-			<div class="col-md-10">
+			<div class="col-md-12">
 				<div class="row">
 					<div class="col-md-12">
 						<!--=======MIGAS DE PAN=========-->
@@ -163,7 +163,7 @@
 															</div>
 															
 															<div class="col-sm-9 col-md-8 col-lg-9">
-																<a href="/dashboard/eval/<%- Eval.evaluacionId  %>/u/<%- evalASubord[i].usuarioEvaluado %>" class="btn btn-primary btn-lg btn-block">Ejecutar</a>
+																<a href="/dashboard/eval/<%- Eval.evaluacionId  %>/u/<%- evalASubord[i].usuarioEvaluado %>" class="btn btn-dark btn-lg btn-block">Ejecutar</a>
 																<hr style="margin: 7px">
 																<p>
 																	Evaluar A: 
