--- a/app/views/empleado/evaluacion/evalAJefe.html
+++ b/app/views/empleado/evaluacion/evalAJefe.html
@@ -23,7 +23,7 @@
 
 	<div class="container-fluid">
 		<div class="row justify-content-md-center">
-			<div class="col-md-10">
+			<div class="col-md-12">
 				<div class="row">
 					<div class="col-md-12">
 						<!--=======MIGAS DE PAN=========-->
@@ -158,7 +158,7 @@
 										</div>
 										
 										<div class="col-sm-9 col-md-9">
-											<a href="/dashboard/eval/<%- parseInt(id) %>/u/<%- evalAJefe.usuarioEvaluado %>" class="btn btn-primary btn-lg btn-block">Ejecutar</a>
+											<a href="/dashboard/eval/<%- parseInt(id) %>/u/<%- evalAJefe.usuarioEvaluado %>" class="btn btn-secondary btn-lg btn-block">Ejecutar</a>
 											<hr style="margin: 7px">
 											<p>algo</p>
 										</div>
