--- a/app/views/president/detalles/personal/calificacion.html
+++ b/app/views/president/detalles/personal/calificacion.html
@@ -231,6 +231,38 @@
 								<div class="col-md-12">
 									<div class="card">
 										<div class="card-body">
+											<div class="article border-bottom">
+												<h3>Calificacion General</h3>
+											</div>
+											<div>
+												<br>
+												<div class="row">
+													<div class="col-lg-3 col-md-4 col-sm-3">
+														<div class="card">
+															<div class="card-body text-center">
+																<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-user-secret" style="font-size: 30pt;"></i>
+																<hr style="margin: 1px">
+																<p><strong>Total</strong></p>
+															</div>
+														</div>
+													</div>
+
+													<div class="col-lg-9 col-md-8 col-sm-9 text-center">
+														<br><br>
+														<div class="progress">
+															<div class="progress-bar" role="progressbar" style="width: <%= califiGeneral * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= califiGeneral %> Ptos</b></div>
+														</div>
+													</div>	
+												</div>
+											</div>
+										</div>
+									</div>
+									<br>
+								</div>
+
+								<div class="col-md-12">
+									<div class="card">
+										<div class="card-body">
 											<h3>Observación</h3>
 											<hr>
 											<form method="POST" action="#" id="">
